# terradrift

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  Makefile  README.beginner.md  README.md  README.research.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  research_question.yml
benchmarks/: results.md  runner.py
corpus/: README.md  crawl.py  repos.csv  results.json  test-results.json  walker.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  REPRODUCIBILITY.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md
notebooks/: 01_corpus_stats.ipynb  02_drift_analysis.py  summary.csv
reports/: 2026-05-18-security.md  2026-05-19-security.md  2026-05-20-security.md  2026-05-21-security.md  2026-05-22-security.md  2026-05-23-security.md  2026-05-24-security.md  2026-05-25-security.md  2026-05-26-security.md  2026-05-27-security.md  2026-05-28-security.md  2026-05-29-security.md  2026-05-30-security.md  2026-05-31-security.md  2026-06-01-security.md  2026-06-02-security.md  2026-06-03-security.md  2026-06-04-security.md  2026-06-05-security.md  2026-06-06-security.md  2026-06-07-security.md  2026-06-08-security.md  2026-06-09-security.md  2026-06-10-security.md  2026-06-11-security.md  2026-06-12-security.md  2026-06-13-security.md  2026-06-14-security.md  2026-06-15-security.md  2026-06-16-security.md  2026-06-17-security.md  2026-06-18-security.md  2026-06-19-security.md  2026-06-20-security.md  2026-06-21-security.md  2026-06-22-security.md  2026-06-23-security.md  2026-06-24-security.md  2026-06-25-security.md  2026-06-26-security.md  (+38 more)
scripts/: build_weekly_digest.py  update_results_table.py
(+25 files in other folders)
