[project]
name = "terradrift"
version = "0.1.0"
description = "An empirical study of security drift in public Terraform modules."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Barrie20" }]
keywords = ["terraform", "iac", "security", "drift", "empirical-study", "msr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "pydantic>=2.7",
  "duckdb>=1.0",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.scripts]
terradrift = "terradrift.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terradrift"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", "docs/paper", "infra"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101", "S603", "S607", "S105", "UP042"]
per-file-ignores = { "tests/**" = ["S"], "scripts/**" = ["S"] }

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "slow: tests that take >1s",
  "integration: tests that hit external services",
]
